--- a/sass/components/breadcrumbs.scss
+++ b/sass/components/breadcrumbs.scss
@@ -3,7 +3,7 @@
 
 .breadcrumbs {
   position: relative;
-  padding: 10px;
+  padding: 0 10px;
   margin: 0 20px;
   background: rgb(193,193,193);
   background: linear-gradient(0deg, rgba(193,193,193,1) 0%, rgba(211,211,211,1) 20%, rgba(217,217,217,1) 100%);
