--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -1,102 +1,10 @@
 <header class="item-header">
   <div class="item-header__title">
     <div class="item-header__meta">
-      <span class="item-header__type item-header__type--bug">Bug</span>
-      <span class="item-header__id">391441</span>
+      <span class="item-header__type item-header__type--bug fnt--label">Bug</span>
+      <span class="item-header__id fnt">391441</span>
     </div>
     <h2 title="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END">PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END</h2>
-  </div>
-
-  <div class="item-header__actions">
-    <div class="item-header__action">
-      <div class="pmx-selector">
-        <div class="pmx-selector__item pmx-selector__item--selected">
-          <div class="pmx-selector__block">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="item-header__action">
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
-        <div class="pmx-selector__item JS_selectorItem JS_toggle-progress">
-          <div class="pmx-selector__block">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">च</div>
-          </div>
-        </div>
-        <div class="pmx-selector__itemSeperator"></div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem JS_toggle-comments">
-          <div class="pmx-selector__block">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ރ</div>
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--counter"><sup>11</sup></div>
-          </div>
-        </div>
-        <div class="pmx-selector__itemSeperator"></div>
-        <div class="pmx-selector__item JS_selectorItem">
-          <div class="pmx-selector__block">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">झ</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
-
-
-<header class="item-header">
-  <div class="item-header__title">
-    <div class="item-header__meta">
-      <span class="item-header__type item-header__type--meeting">Meeting</span>
-      <span class="item-header__id">391441</span>
-    </div>
-    <h2>PMX - Fix horizontal scroll alterneting in FireFox PMX</h2>
-  </div>
-
-  <div class="item-header__actions">
-    <div class="item-header__action">
-      <div class="pmx-selector">
-        <div class="pmx-selector__item pmx-selector__item--selected">
-          <div class="pmx-selector__block">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="item-header__action">
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
-        <div class="pmx-selector__item JS_selectorItem JS_toggle-progress">
-          <div class="pmx-selector__block">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">च</div>
-          </div>
-        </div>
-        <div class="pmx-selector__itemSeperator"></div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem JS_toggle-comments">
-          <div class="pmx-selector__block">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ރ</div>
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--counter"><sup>11</sup></div>
-          </div>
-        </div>
-        <div class="pmx-selector__itemSeperator"></div>
-        <div class="pmx-selector__item JS_selectorItem">
-          <div class="pmx-selector__block">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">झ</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
-
-
-<header class="item-header">
-  <div class="item-header__title">
-    <div class="item-header__meta">
-      <span class="item-header__type item-header__type--story">Story</span>
-      <span class="item-header__id">391441</span>
-    </div>
-    <h2>PMX - Fix horizontal scroll alterneting in FireFox PMX</h2>
   </div>
 
   <div class="item-header__actions">
