Multiselect: adding new item now checks for simple text OR unit

--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -1,16 +1,6 @@
 <ul class="itemBoxTable__bodyRow JS_filterableCell">
   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-    <div class="itemBoxTable__bodyCellInner ${excludeClass} ${colorToggleTriggerInnerClass}">
-      ${colorToggleHTML}
-      <div class="pmx-selector pmx-selector--readonly">
-        <div class="pmx-selector__item">
-          <div class="pmx-selector__block">
-            ${colorPrefixHTML}
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">${textOfActionItem}</div>
-          </div>
-        </div>
-      </div>
-    </div>
+    ${newSelectedItemHTML}
   </li>
   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable" style="flex-grow: 0;" data-flex="0">
     <div class="itemBoxTable__bodyCellInner">
