--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -1,4 +1,4 @@
-<div class="multiSelector multiSelector--popup" id="multiSelector-columnpicker">
+<div class="multiSelector multiSelector--popup JS_multiSelector--simpleText" id="multiSelector-columnpicker">
 
   <div class="itemBox JS_multiSelector__box">
     <div class="itemBoxTable">
